--- a/HomeBudgetManagment.Api/HomeBudgetManagment.Api.csproj
+++ b/HomeBudgetManagment.Api/HomeBudgetManagment.Api.csproj
@@ -234,6 +234,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\AutomapperOrganizationProfile.cs" />
+    <Compile Include="Migrations\201901121039472_initial.cs" />
+    <Compile Include="Migrations\201901121039472_initial.Designer.cs">
+      <DependentUpon>201901121039472_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Implementations\MapperConfProvider.cs" />
     <Compile Include="Models\Interfaces\IMapperConfProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -277,13 +282,6 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
-    <Content Include="Web.Debug.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
-    <Content Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\_references.js" />
@@ -292,6 +290,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HomeBudgetManagment.DTO\HomeBudgetManagment.DTO.csproj">
@@ -306,6 +305,11 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201901121039472_initial.resx">
+      <DependentUpon>201901121039472_initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
