--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
 }
 
-
-
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
