--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,11 @@
     package="pawel.wiklo.swinkaskarbonka">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature android:name="android.hardware.camera" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,11 +17,11 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
         <activity android:name=".addIncome" />
-        <activity android:name=".ChartsView"></activity>
+        <activity android:name=".ChartsView" />
         <activity android:name=".BarchartIncome" />
         <activity android:name=".BarchartExpenses" />
         <activity android:name=".PiechartIncome" />
-        <activity android:name=".PiechartExpenses"></activity>
+        <activity android:name=".PiechartExpenses" />
         <activity android:name=".dodawanieWydatkow" />
         <activity android:name=".zarzadzanieWydatkami" />
         <activity android:name=".Logowanie">
@@ -31,9 +33,11 @@
         </activity>
         <activity android:name=".Rejestracja" />
         <activity android:name=".RejestracjaDomostwa" />
-        <activity android:name=".GetUserList"/>
-        <activity android:name=".OcrCaptureActivity" android:label="Read Text"/>
-
+        <activity android:name=".GetUserList" />
+        <activity
+            android:name=".OcrCaptureActivity"
+            android:label="Read Text" />
+        <activity android:name=".dodawaniePrzychodu"></activity>
     </application>
 
 </manifest>
