Skarbonka i informacje o innych domownikach.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         <activity
             android:name=".OcrCaptureActivity"
             android:label="Read Text" />
-        <activity android:name=".dodawaniePrzychodu"></activity>
+        <activity android:name=".dodawaniePrzychodu" />
+        <activity android:name=".Skarbonka"></activity>
     </application>
 
 </manifest>
